fix overflow

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body {
-    overflow-x: hidden;
-}
-
 .jumbotron {
     padding-top: 2rem;
     background-color: rgb(180, 180, 180);
